<?xml version="1.0" encoding="utf-8"?>
<layout>

    <data>

        <import type="android.view.View" />

        <variable
            name="caseStudiesDetailViewModel"
            type="com.kincarta.app.presentation.views.CaseStudyDetailViewModel" />

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.views.CaseStudies.CaseStudiesActivity">

        <!--AppBarLayout helps the toolbar and other components to react on
            scroll changes. I am using Dark theme for AppBarLayout.
            Inside this AppBarLayout i
            have used CollapsingToolbarLayout. -->
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/detail_app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <!-- In CollapsingToolbarLayout sompe important attributes are:
             i)  app:layout_scrollFlags which is used to specify how collapsing
                 layout behaves when content is scrolled.I have used
                 app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                 so it will scroll until it's is completely collapsed.
             ii) app:contentScrim="@color/green" that specifies the color
                  of the collapsed toolbar -->
            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/detail_collapse_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentScrim="@color/colorPrimaryDark"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed"
                app:title="@string/app_name">

                <!--We are adding the image that we have added earlier
                      in the drawable folder.The attribute app:layout_collapseMode="parallax"
                      causes the image to move when user scrolls at a specific ratio. -->
                <ImageView
                    android:id="@+id/detail_toolbar_image_view"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:contentDescription="@string/content_description_expanded_image"
                    app:layout_collapseMode="parallax" />

                <RelativeLayout
                    android:id="@+id/layout_collapse_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <ImageView
                        android:id="@+id/fav_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/margin_10dp"
                        android:src="@drawable/ic_baseline_favorite_border_24" />

                    <ImageView
                        android:id="@+id/back_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:layout_marginEnd="@dimen/margin_10dp"
                        android:src="@drawable/ic_baseline_arrow_back_24" />
                </RelativeLayout>

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/detail_toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:fitsSystemWindows="true"
                    android:minHeight="?attr/actionBarSize"
                    app:contentScrim="@color/colorPrimary"
                    app:layout_collapseMode="pin"
                    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

                    <RelativeLayout
                        android:id="@+id/layout_toolbar"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone">

                        <ImageView
                            android:id="@+id/back_view_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentStart="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/margin_10dp"
                            android:src="@drawable/ic_baseline_arrow_back_24" />

                        <TextView
                            android:id="@+id/tv_toolbar_title"
                            android:layout_centerHorizontal="true"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="@dimen/text_margin_20"
                            android:textColor="@color/white"/>

                        <ImageView
                            android:id="@+id/fav_view_img"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_marginEnd="@dimen/margin_10dp"
                            android:src="@{caseStudiesDetailViewModel.caseStudyDetailData.first.isFab == 0 ? @drawable/ic_baseline_favorite_border_24 : @drawable/ic_baseline_favorite_red_24}" />
                    </RelativeLayout>
                </androidx.appcompat.widget.Toolbar>

            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/detail_nested_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorPrimaryLight"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <RelativeLayout
                android:id="@+id/main_Layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="blocksDescendants"
                android:orientation="vertical">

                <ProgressBar
                    android:id="@+id/photo_progress_bar"
                    style="@style/Base.Widget.AppCompat.ProgressBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true" />

                <androidx.compose.ui.platform.ComposeView
                    android:id="@+id/my_composable"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/margin_10dp" />
            </RelativeLayout>


        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</layout>
