...
                app:tabTextColor="@color/white" />
        </com.google.android.material.appbar.AppBarLayout>

        <!-- view pager is used to open other fragment by using
            left or right swip-->
        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/tab_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/margin_5dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

        <androidx.fragment.app.FragmentContainerView
...
